--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "multi_step_form",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://caseygirlyn.github.io/multistepform/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "material-ui": "^0.20.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
@@ -12,6 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
