--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "multi_step_form",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://caseygirlyn.github.io/multistepform/",
+  "homepage":"https://caseygirlyn.github.io/multi_step_form/",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "material-ui": "^0.20.2",
